--- a/index.html
+++ b/index.html
@@ -240,21 +240,21 @@ border: 0;">
 
     </div>
   </div>
-  <div class="w-100" style="background-color: #f5f5f5; padding: 100px;">
+  
     <div class="header-sec">
-      <h2 style="color: #5e068a; text-align: center; font-weight: 500;">OUR <span style="color: #9e6ab9;">COURSES</span>
+      <h2 style="color: #5e068a; text-align: center; font-weight: 500; margin-top: 67px;">OUR <span style="color: #9e6ab9;">COURSES</span>
       </h2>
     </div><br>
-    <div class="container w-100 bg-light mt-6">
+    <div class="container w-100  mt-6">
       <div class="row">
         <div class="col-lg-6 mt-2 p-2">
           <img src="./images/lumpic4.jpg" style="height: 350px;" class="d-block w-100" alt="...">
 
         </div>
-        <div class="col-lg-6 mt-2 p-2">
-          <div class="secondcol mt-4 text-left">
+        <div class="col-lg-6 mt-4">
+          
            <h3 style="font-size: 20px; color: #5e068a; font-weight: 600; text-transform: uppercase; margin-left: 49px;">Data Science - ML - AI - Big Data with Cloud & Tableau</h3>
-          </div><br>
+          <br>
           <p style="margin-left: 49px;">Python, Hadoop, Spark, Data Analytics, Linear Algebra, Statistics, Probability Concepts, Machine Learning,
             Deep Learning, Data Science, Artificial Intelligence, Tableau, AWS Cloud.</p>
             <p style="margin-left: 49px;"><strong>📅 Next Batch : Jan 03<sup>rd</sup> 2022 (09:30 am - 11:30 am)</strong></p>
@@ -264,7 +264,7 @@ border: 0;">
       </div>
 
     </div>
-  </div>
+  
 </body>
 
 </html>
